k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickandmorty-deployment
  namespace: develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickandmorty
  template:
    metadata:
      labels:
        app: rickandmorty
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: rickandmorty
          image: caravem/rickandmorty:3df3d717bcf184ce92b3e5379370114721b69e99
          ports:
            - containerPort: 3000
