k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty-service
  namespace: develop
spec:
  type: LoadBalancer
  selector:
    app: rickandmorty
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000  
  type: ClusterIP
